Split questions in toolbar into grid. Need to fix overflow.

--- a/app/less/event-admin.less
+++ b/app/less/event-admin.less
@@ -236,6 +236,7 @@ main.event-questions {
       margin: 4px 2px 1px;
       font-size: 13px;
       cursor: move;
+      width: 100%
     }
   }
   .questions-toolbar.affix{
